--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,23 @@ header {
     color: #ffffff;
 }
 
+.seo {
+    color: #d9dcd6;
+}
+
 h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.seo {
-    color: #d9dcd6;
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 nav {
@@ -41,11 +51,6 @@ nav ul li {
     margin-left: 25px;
 }
 
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 a {
     color: #ffffff;
     text-decoration: none;
@@ -59,9 +64,9 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .float-left {
@@ -83,7 +88,6 @@ p {
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    /* clear: both; */
     float: right;
     width: 20%;
     height: 100%;
@@ -94,11 +98,6 @@ p {
 .benefit-block {
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-h3 {
-    margin-bottom: 10px;
-    text-align: center;
 }
 
 .benefit-block img {
